--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
         "tsc": "tsc",
         "lint": "eslint '*/**/*.{js,ts}' --fix",
         "prettier": "prettier --write ."
-        
     },
     "author": "Udacity, Marvin Splitt",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "db-migrate": "^0.11.12",
         "db-migrate-pg": "^1.2.2",
         "express": "^4.17.1",
         "pg": "^8.6.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jasmine": "^3.7.8",
         "@types/node": "^16.0.1",
