--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "author": "Udacity, Marvin Splitt",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "db-migrate": "^0.11.12",
         "db-migrate-pg": "^1.2.2",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.6.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jasmine": "^3.7.8",
+        "@types/jsonwebtoken": "^8.5.4",
         "@types/node": "^16.0.1",
         "@types/pg": "^8.6.1",
         "@types/supertest": "^2.0.11",
