--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "error",
         "@typescript-eslint/explicit-function-return-type": "error",
-        "@typescript-eslint/explicit-module-boundary-types": "error"
+        "@typescript-eslint/explicit-module-boundary-types": "error",
+        "@typescript-eslint/no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": true }]
     },
     "ignorePatterns": ["dist"]
 }
