--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
         "test": "npm run test-up && NODE_ENV=test jasmine-ts; npm run test-down",
         "test-up": "db-migrate --env test up",
-        "test-down": "db-migrate --env test down",
+        "test-down": "db-migrate --env test reset",
         "tsc": "tsc",
         "lint": "eslint '*/**/*.{js,ts}' --fix",
         "prettier": "prettier --write ."
@@ -23,7 +23,8 @@
         "db-migrate-pg": "^1.2.2",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "pg": "^8.6.0"
+        "pg": "^8.6.0",
+        "supertest": "^6.1.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
