--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "node src/server.ts",
         "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess 'node ./dist/server.js'",
         "test": "npm run test-up && NODE_ENV=test jasmine-ts; npm run test-down",
-        "test-up": "db-migrate --env test up",
-        "test-down": "db-migrate --env test reset",
+        "test-up": "db-migrate db:create storefront_test && db-migrate --env test up",
+        "test-down": "db-migrate db:drop storefront_test",
         "tsc": "tsc",
         "lint": "eslint '*/**/*.{js,ts}' --fix",
         "prettier": "prettier --write ."
